--- a/survey.html
+++ b/survey.html
@@ -14,8 +14,37 @@
 		<p ng-repeat="city in mainCtrl.citys">{{city._id}}, {{city.name}}</p>
 	</div>
 
-	<select ng-model="mainCtrl.city" ng-options="city.name for city in mainCtrl.citys">
-	</select>
+    <form name="userForm" novalidate>
+
+        <div class="form-group">
+	    	<label>Select a City</label>
+			<select class="form-control" ng-required="true" ng-model="user.city" ng-options="city.name for city in mainCtrl.citys">
+			</select><br>
+		</div>	
+
+		<div class="form-group" ng-class="{ 'has-error' : userForm.workshop1.$invalid && (userForm.workshop1.$dirty || submitted)}">
+			<label>Select Workshops (Any three)</label><br>
+			<label>Workshop1</label><br>
+			<select name="workshop1" class="form-control" ng-model="user.workshop1" ng-required="true" ng-options="wshop for wshop in mainCtrl.workshops">
+			</select>
+			<p ng-show="userForm.gender.$error.required && (userForm.gender.$dirty || submitted)" class="help-block">Select gender.</p>
+		</div>
+
+		<div class="form-group">
+			<label>Workshop2</label><br>
+			<select class="form-control" ng-model="user.workshop2" ng-options="wshop for wshop in mainCtrl.workshops">
+			</select><br>
+		</div>
+
+		<div class="form-group">
+			<label>Workshop3</label><br>
+			<select class="form-control" ng-model="user.workshop3" ng-options="wshop for wshop in mainCtrl.workshops">
+			</select><br>
+		</div>	
+
+		<button type="submit" ng-click="mainCtrl.submitForm()" ng-disabled="userForm.$invalid" class="btn btn-primary">Submit</button>
+	</form>	
+
 
 </body>
 </html>
