--- a/survey.html
+++ b/survey.html
@@ -11,6 +11,8 @@
 
 <body ng-app="surveyApp" ng-controller="main as mainCtrl">
 
+	<h1>Sampark Survey</h1>
+
     <form name="userForm" novalidate>
 
         <div class="form-group">
@@ -20,26 +22,27 @@
 			</select>
 		</div>	
 
-		<div class="form-group" ng-class="{ 'has-error' : userForm.workshop1.$invalid && (userForm.workshop1.$dirty || submitted)}">
-			<label>Workshop1</label>
-			<select name="workshop1" class="form-control" ng-model="mainCtrl.workshop1" ng-required="true" ng-options="wshop for wshop in mainCtrl.workshops">
-			</select>
+		<div>
+			<div class="form-group" ng-class="{ 'has-error' : userForm.workshop1.$invalid && (userForm.workshop1.$dirty || submitted)}">
+				<label>Workshop1</label>
+				<select class="form-control" ng-model="mainCtrl.workshop1" ng-required="true" ng-options="wshop for wshop in mainCtrl.workshops" ng-change="mainCtrl.optionChanged(mainCtrl.workshop1)">
+				</select>
+			</div>
+
+			<div class="form-group">
+				<label>Workshop2</label>
+				<select class="form-control" ng-model="mainCtrl.workshop2" ng-required="true" ng-options="wshop for wshop in mainCtrl.workshops" ng-change="mainCtrl.optionChanged(mainCtrl.workshop2)">
+				</select>
+			</div>
+
+			<div class="form-group">
+				<label>Workshop3</label>
+				<select class="form-control" ng-model="mainCtrl.workshop3" ng-required="true" ng-options="wshop for wshop in mainCtrl.workshops" ng-change="mainCtrl.optionChanged(mainCtrl.workshop3)">
+				</select>
+			</div>	
+
+			<button type="submit" ng-click="mainCtrl.submitForm()" ng-disabled="userForm.$invalid" class="btn btn-primary">Submit</button>
 		</div>
-
-		<div class="form-group">
-			<label>Workshop2</label>
-			<select class="form-control" ng-model="mainCtrl.workshop2" ng-options="wshop for wshop in mainCtrl.workshops">
-			</select>
-		</div>
-
-		<div class="form-group">
-			<label>Workshop3</label>
-			<select class="form-control" ng-model="mainCtrl.workshop3" ng-options="wshop for wshop in mainCtrl.workshops">
-			</select>
-		</div>	
-
-		<button type="submit" ng-click="mainCtrl.submitForm()" ng-disabled="userForm.$invalid" class="btn btn-primary">Submit</button>
 	</form>	
-
 </body>
 </html>
