--- a/survey.html
+++ b/survey.html
@@ -6,17 +6,56 @@
 	<title>Sampark Survey - Shaastra 2018</title>
   	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
   	<script type="text/javascript" src="./survey.js"></script>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+	
+	<style>
+		h1{
+			background: #D31027;  /* fallback for old browsers */
+background: -webkit-linear-gradient(135deg, #EA384D, #D31027);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(135deg, #EA384D, #D31027);
+			margin-bottom: 60px;
+			-webkit-background-clip: text;
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
+		}
+
+		label{
+			font-weight: 400;
+			font-size: 18px;
+		}
+
+		.form-group{
+			margin: 20px 0 40px 0;
+		}
+
+		form select{
+			margin: 5px 0;
+			height: 20px;
+			max-width: 300px;
+		}
+
+		.btn{
+			text-transform: uppercase;
+			border-radius: 2px;
+			background: #D31027;  /* fallback for old browsers */
+background: -webkit-linear-gradient(135deg, #EA384D, #D31027);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(135deg, #EA384D, #D31027); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+padding: 1% 4%;
+box-shadow: 0 2px 5px gainsboro;
+
+border: 0;
+		}
+		</style>
 </head>
 
 <body ng-app="surveyApp" ng-controller="main as mainCtrl">
 
-	<h1>Sampark Survey</h1>
+	<h1>Tell us your preferred workshops for Sampark</h1>
 
     <form name="userForm" novalidate>
 
         <div class="form-group">
-	    	<label>Select a City</label>
+	    	<label>Which City are you from?</label>
 			<select class="form-control" ng-required="true" ng-model="mainCtrl.city">
 				<option ng-repeat="city in mainCtrl.citys" value="{{city._id}}">{{city.name}}</option>
 			</select>
@@ -24,19 +63,19 @@
 
 		<div>
 			<div class="form-group" ng-class="{ 'has-error' : userForm.workshop1.$invalid && (userForm.workshop1.$dirty || submitted)}">
-				<label>Workshop1</label>
+				<label>Select your 1st preference</label>
 				<select class="form-control" ng-model="mainCtrl.workshop1" ng-required="true" ng-options="wshop for wshop in mainCtrl.workshops" ng-change="mainCtrl.optionChanged(mainCtrl.workshop1)">
 				</select>
 			</div>
 
 			<div class="form-group">
-				<label>Workshop2</label>
+				<label>2nd preference</label>
 				<select class="form-control" ng-model="mainCtrl.workshop2" ng-required="true" ng-options="wshop for wshop in mainCtrl.workshops" ng-change="mainCtrl.optionChanged(mainCtrl.workshop2)">
 				</select>
 			</div>
 
 			<div class="form-group">
-				<label>Workshop3</label>
+				<label>3rd preference</label>
 				<select class="form-control" ng-model="mainCtrl.workshop3" ng-required="true" ng-options="wshop for wshop in mainCtrl.workshops" ng-change="mainCtrl.optionChanged(mainCtrl.workshop3)">
 				</select>
 			</div>	
