--- a/survey.html
+++ b/survey.html
@@ -64,20 +64,25 @@ border: 0;
 		<div>
 			<div class="form-group" ng-class="{ 'has-error' : userForm.workshop1.$invalid && (userForm.workshop1.$dirty || submitted)}">
 				<label>Select your 1st preference</label>
-				<select class="form-control" ng-model="mainCtrl.workshop1" ng-required="true" ng-options="wshop for wshop in mainCtrl.workshops" ng-change="mainCtrl.optionChanged(mainCtrl.workshop1)">
+				<select class="form-control" ng-model="workshop11" ng-required="true" ng-options="wshop.name for wshop in mainCtrl.workshops" ng-click="mainCtrl.optionChanged(workshop11)">
 				</select>
 			</div>
 
 			<div class="form-group">
 				<label>2nd preference</label>
-				<select class="form-control" ng-model="mainCtrl.workshop2" ng-required="true" ng-options="wshop for wshop in mainCtrl.workshops" ng-change="mainCtrl.optionChanged(mainCtrl.workshop2)">
+				<select class="form-control" ng-model="workshop21" ng-required="true" ng-options="wshop.name for wshop in mainCtrl.workshops | filter:{name:'!'+workshop11.name}" ng-click="mainCtrl.optionChanged(workshop21)">
 				</select>
 			</div>
 
 			<div class="form-group">
 				<label>3rd preference</label>
-				<select class="form-control" ng-model="mainCtrl.workshop3" ng-required="true" ng-options="wshop for wshop in mainCtrl.workshops" ng-change="mainCtrl.optionChanged(mainCtrl.workshop3)">
+				<select class="form-control" ng-model="workshop31" ng-required="true" ng-options="wshop.name for wshop in mainCtrl.workshops | filter: mainCtrl.filterWorkshop"  ng-click="mainCtrl.optionChanged(workshop31)">
 				</select>
+			</div>	
+
+			<div class="form-group">
+	    	<label>Give us your Suggestions about Sampark</label>
+			<input class="form-control" type="text" ng-model="mainCtrl.suggestion" ng-required="false" >
 			</div>	
 
 			<button type="submit" ng-click="mainCtrl.submitForm()" ng-disabled="userForm.$invalid" class="btn btn-primary">Submit</button>
