--- a/index.html
+++ b/index.html
@@ -277,6 +277,10 @@ a{
     margin: 2%;
   }
 
+  .modal{
+    position: absolute;
+  }
+
   .social{
     border-top: 1px solid gainsboro;
     position: fixed;
