--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@ img{
     
     <div class="top" >
       <h1>SHAASTRA'18</h1>
-      <h2>{{4+4}} {{date | date:'yyyy-MM-dd'}} days to go</h2>
+<!--      <h2>{{4+4}} {{date | date:'yyyy-MM-dd'}} days to go</h2> -->
 
       
     </div>
