--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@ a{
       <a href="http://www.moot.in/registration.php" target="_blank">
       <div class="two m">
       <h2>MOOTCOURT registations are open.</h2>
-      <h3> Register to take part in the summit.</h3>
+      <h3> Register to take part in the mootcourt.</h3>
       <h4>http://www.moot.in/registration.php</h4>
       </div>
       </a>
