removed ca, sampark form. added summit

--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@ a{
     </div>
 
     <div class="bottom" >
-      
+<!--      
       <div class="samparksurvey m" ng-click="toggle=!toggle">
             <h2>Hey, let us know what workshops would you like us to conduct, at your place</h2>
             <h3>click to fill the form</h3>
@@ -384,15 +384,15 @@ a{
       <h4>http://ca.shaastra.org</h4>
       </div>
       </a>
-      
-  <!--     <a href="http://summitportal.shaastra.org" target="_blank">
+ -->      
+      <a href="http://summitportal.shaastra.org" target="_blank">
       <div class="two m">
       <h2>SUMMIT registations are open.</h2>
       <h3> Register to take part in the summit.</h3>
       <h4>http://summitportal.shaastra.org</h4>
       </div>
       </a>
- -->
+
       <a href="http://www.moot.in/registration.php" target="_blank">
       <div class="two m">
       <h2>MOOTCOURT registations are open.</h2>
