updated tif in homepage

--- a/index.html
+++ b/index.html
@@ -401,6 +401,14 @@ a{
       </div>
       </a>
 
+      <a href="http://tif.shaastra.org" target="_blank">
+      <div class="two m">
+      <h2>TIF registations are open.</h2>
+      <h3> Register to showcase your project in the Techno Innovation Fair.</h3>
+      <h4>http://tif.shaastra.org</h4>
+      </div>
+      </a>
+
       </div>
     </div>
   
