--- a/index.html
+++ b/index.html
@@ -28,8 +28,22 @@ body{
   color: whitesmoke;
 }
 
+.heading{
+  font-size: 4em;
+}
+
 .bigbox{
   padding: 0 20px;
+}
+
+.mycard {
+  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+  padding: 0.1em;
+}
+
+.mycard:hover {
+  box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
 }
 
 .top h1, h2{
@@ -139,9 +153,28 @@ a{
   transform: translateY(-2px);
 }
 
+.schcolor{
+  background: #4568DC;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(45deg, #B06AB3, #4568DC);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(45deg, #B06AB3, #4568DC); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  -webkit-background-clip: text;
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
+
+}
+
 
 
 @media only screen and (min-width: 768px){
+  .sch{
+   text-align: center;
+   font-size: 1.8em;
+   margin-bottom: 1em;
+ }
+ .tagline{
+  text-align: center;
+  font-size: 2.1em;
+ }
   .bigbox{
     margin-left: 100px;
   }
@@ -152,6 +185,10 @@ a{
     top:30px;
     font-size: 18px;
   }
+
+  .mycard {
+       max-width:50%;
+     }
 
   br{
     display: block;
@@ -254,11 +291,21 @@ a{
 }
 
 @media only screen and (max-width: 767px) {
+  .sch{
+   text-align: center;
+   font-size: 0.8em;
+   margin-bottom: 1em;
+ }
+ .tagline{
+  text-align: center;
+  font-size: 1.1em;
+ }
   body{
     overflow: visible;
   }
 
   .top h1{
+    text-align: center;
     border: none;
   }
 
@@ -307,6 +354,8 @@ a{
   }
 }
 
+
+
 .date{
   position: absolute;
   right: 5px;
@@ -320,8 +369,12 @@ a{
   <div class="bigbox">
      <!-- <h2 class="date"><span style="color: #B06AB3;font-size: 3em;">{{mainCtrl.days}}</span><br> days to go</h2> -->
     
-    <div class="top" >
-      <h1>SHAASTRA'18</h1>
+    <div class="top">
+      <h1>SHAASTRA 2018</h1>
+    </div>
+
+    <div class="sch">
+      <h2><span class="schcolor">3 &nbsp JAN </span>&nbsp  TO &nbsp<span class="schcolor">7 &nbsp JAN</span> &nbsp 2018</h2>
     </div>
 
     <div class="bottom" >
@@ -410,6 +463,14 @@ a{
       </a>
 
       </div>
+       <div align="center">
+        <div class="tagline schcolor mycard" style="margin-top: 1em;">
+
+         <h2>Main website coming soon <br> Stay tuned!!</button></h2>
+          
+        </div>
+       </div> 
+
     </div>
   
   <div class="social">
