--- a/index.html
+++ b/index.html
@@ -28,9 +28,7 @@ body{
   color: whitesmoke;
 }
 
-.heading{
-  font-size: 4em;
-}
+
 
 .bigbox{
   padding: 0 20px;
@@ -190,6 +188,10 @@ a{
        max-width:50%;
      }
 
+  .heading{
+  font-size: 3.5em;
+     }   
+
   br{
     display: block;
   }
@@ -304,6 +306,10 @@ a{
     overflow: visible;
   }
 
+  .heading{
+  font-size: 1.5em;
+  }
+
   .top h1{
     text-align: center;
     border: none;
@@ -368,12 +374,13 @@ a{
 <body ng-app="surveyApp"  ng-controller="main as mainCtrl">
   <div class="bigbox">
      <!-- <h2 class="date"><span style="color: #B06AB3;font-size: 3em;">{{mainCtrl.days}}</span><br> days to go</h2> -->
-    
-    <div class="top">
-      <h1>SHAASTRA 2018</h1>
-    </div>
+    <div align="center">
+      <div class="heading" style="color: #000000; margin-bottom: 0em;">
+        <h1>SHAASTRA 2018</h1>
+      </div>
+    </div>  
 
-    <div class="sch">
+    <div class="sch" style="margin-top: -2.1em;">
       <h2><span class="schcolor">3 &nbsp JAN </span>&nbsp  TO &nbsp<span class="schcolor">7 &nbsp JAN</span> &nbsp 2018</h2>
     </div>
 
@@ -464,7 +471,7 @@ a{
 
       </div>
        <div align="center">
-        <div class="tagline schcolor mycard" style="margin-top: 0em;">
+        <div class="tagline schcolor mycard" style="margin-top: 0.4em;">
 
          <h2>Main website coming soon <br> Stay tuned!!</button></h2>
           
