--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@ a{
   }
 
   .heading{
-  font-size: 1.5em;
+  font-size: 1.0em;
   }
 
   .top h1{
@@ -375,7 +375,7 @@ a{
   <div class="bigbox">
      <!-- <h2 class="date"><span style="color: #B06AB3;font-size: 3em;">{{mainCtrl.days}}</span><br> days to go</h2> -->
     <div align="center">
-      <div class="heading" style="color: #000000; margin-bottom: 0em;">
+      <div class="heading" style="color: #000000;">
         <h1>SHAASTRA 2018</h1>
       </div>
     </div>  
