--- a/index.html
+++ b/index.html
@@ -369,6 +369,11 @@ a{
 }
 
 </style>
+<script type="text/javascript">
+	function openBoeingRules(){
+    window.open('http://shaastra.org/images/Boeing.pdf', '_blank');
+  }
+</script>
 </head>
 
 <body ng-app="surveyApp"  ng-controller="main as mainCtrl">
@@ -445,6 +450,16 @@ a{
       </div>
       </a>
  -->      
+       
+      <div class="two m">
+      <a href="https://docs.google.com/forms/d/e/1FAIpQLSdpJpV5ZPKWgSYKtBOFG460QSaWmgKoUBGCR7LXyvIZdZ6hkg/viewform?usp=sf_link" target="_blank">
+      <h2>BOEING National Aeromodelling Competition registrations are open.</h2>
+      <h3>Click here to Register for the competition.</h3>
+      </a>
+      <h4 onclick="openBoeingRules()" style="text-decoration: underline;">Click here for the Rules</h4>
+      </div>
+      
+
       <a href="http://summitportal.shaastra.org" target="_blank">
       <div class="two m">
       <h2>SUMMIT registations are open.</h2>
